--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/wm_red_2.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Samodra's Personal Website" />
-    <link rel="apple-touch-icon" sizes="180x180" href="html-icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="html-icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="html-icons/favicon-16x16.png">
-    <link rel="mask-icon" href="html-icons/safari-pinned-tab.svg" color="#161a1d">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#161a1d">
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/wm_red_2.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Samodra's Personal Website" />
+  <link rel="apple-touch-icon" sizes="180x180" href="html-icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="html-icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="html-icons/favicon-16x16.png">
+  <link rel="mask-icon" href="html-icons/safari-pinned-tab.svg" color="#161a1d">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#161a1d">
+  <meta name="twitter:image:src" content="%PUBLIC_URL%/images/profile-large.jpg" />
+  <meta name="twitter:site" content="@github" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Samodra's Personal Website" />
+  <meta name="twitter:description" content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
+  <meta property="og:image" content="%PUBLIC_URL%/images/profile-large.jpg" />
+  <meta property="og:image:secure_url" content="%PUBLIC_URL%/images/profile-large.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
+  <meta property="og:image:alt" content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
+  <meta property="og:site_name" content="Samodra" />
+  <meta property="og:title" content="Samodra's Personal Website" />
+  <meta property="og:url" content="https://samodra.me" />
+  <meta property="og:description" content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -25,12 +41,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Samodra</title>
-  </head>
-  <body class="dark">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Samodra</title>
+</head>
+
+<body class="dark">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -40,5 +57,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
