--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,26 @@
   <link rel="mask-icon" href="html-icons/safari-pinned-tab.svg" color="#161a1d">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#161a1d">
-  <meta name="twitter:image:src" content="%PUBLIC_URL%/images/profile-large.jpg" />
-  <meta name="twitter:site" content="@github" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/images/profile-social.jpg" />
+  <meta name="twitter:image:alt" content="Samodra" />
+  <meta name="twitter:image:src" content="%PUBLIC_URL%/images/profile-social.jpg" />
+  <meta name="twitter:site" content="@saamodra" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Samodra's Personal Website" />
-  <meta name="twitter:description" content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
-  <meta property="og:image" content="%PUBLIC_URL%/images/profile-large.jpg" />
-  <meta property="og:image:secure_url" content="%PUBLIC_URL%/images/profile-large.jpg" />
+  <meta name="twitter:description"
+    content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
+  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/images/profile-social.jpg" />
+  <meta property="og:image:secure_url" content="%PUBLIC_URL%/images/profile-social.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="400" />
-  <meta property="og:image:height" content="400" />
-  <meta property="og:image:alt" content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
+  <meta property="og:image:width" content="256" />
+  <meta property="og:image:height" content="256" />
+  <meta property="og:image:alt"
+    content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
   <meta property="og:site_name" content="Samodra" />
   <meta property="og:title" content="Samodra's Personal Website" />
-  <meta property="og:url" content="https://samodra.me" />
-  <meta property="og:description" content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
+  <meta property="og:url" content="https://samodra.my.id" />
+  <meta property="og:description"
+    content="Samodra is a student majoring in Informatics Management. Loves problem solving and Happy to help people to solve their problems." />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
